[gd_scene load_steps=8 format=2]

[ext_resource path="res://Cards/Star Wars/AsajjVentress.gd" type="Script" id=1]
[ext_resource path="res://Assets/Watchword_regular_demo.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Cards/Marvel/AttackLabel.gd" type="Script" id=3]
[ext_resource path="res://Cards/Star Wars/Assets/AsajjVentress.png" type="Texture" id=4]
[ext_resource path="res://Assets/Cardback.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 82.5, 115.5 )

[node name="AsajjVentress" type="Node2D"]
script = ExtResource( 1 )

[node name="Card" type="Sprite" parent="."]
scale = Vector2( 0.22, 0.22 )
texture = ExtResource( 4 )

[node name="AttackLabel" type="Label" parent="."]
margin_left = 44.9491
margin_top = -111.293
margin_right = 69.9491
margin_bottom = -73.2932
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 163.454, 13.238 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackLabel2" type="Label" parent="."]
visible = false
margin_left = 82.359
margin_top = 113.275
margin_right = 107.359
margin_bottom = 151.275
grow_horizontal = 2
grow_vertical = 2
rect_rotation = 180.0
rect_pivot_offset = Vector2( 163.454, 13.238 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.188235, 0.258824, 0.607843, 1 )
text = "1"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cardback" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.22, 0.22 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
